implicatives and re_verbs

--- a/extraction_pipeline/find_triggers.ipynb
+++ b/extraction_pipeline/find_triggers.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 82,
    "id": "6a8e0109",
    "metadata": {
     "scrolled": true
@@ -178,8 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "who played in the celebrity all star game 2018\n",
-      "who can attend the meeting of both houses of parliament without being a member\n"
+      "who warned that a president who could be reelected again and again may easily become a king\n"
      ]
     }
    ],
@@ -202,7 +201,7 @@
     "#             print(text)\n",
     "            \n",
     "    \n",
-    "        if find_numeric_determiners(nlp_text): \n",
+    "        if find_re_verbs(nlp_text): \n",
     "            print(text)"
    ]
   },
@@ -341,21 +340,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "2c0871c2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s10 = \"a microsecond later, images from his exterior sensors didn't snap into focus\"\n",
     "\n",
@@ -364,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "40a8af4a",
    "metadata": {},
    "outputs": [],
@@ -378,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3559ab11",
    "metadata": {},
    "outputs": [],
@@ -388,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "d67c8f7d",
    "metadata": {},
    "outputs": [],
@@ -398,88 +386,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "788d57db",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 's9' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/85/djq58tls0fv3dllvh5_8j5z40000gn/T/ipykernel_49414/781537429.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfind_change_of_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnlp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 's9' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "find_change_of_state(nlp(s9))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "5548367e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "find_continuation_of_state(nlp(s9))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "f3267b95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from numeric_determiners_better import find_numeric_determiners"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "328d1c03",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "find_numeric_determiners(nlp(q))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "a12ea44f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_numeric_determiners(sentence):\n",
     "\n",
-    "    numeric_predeterminers =set([\"all\"])\n",
+    "    numeric_predeterminers = set([\"all\"])\n",
     "    special_determiners = set([\"both\"])\n",
     "    all_determiners = numeric_predeterminers | special_determiners\n",
     "\n",
@@ -553,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "78d2929d",
    "metadata": {},
    "outputs": [
@@ -563,7 +497,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "13743589",
    "metadata": {},
    "outputs": [],
@@ -584,8 +518,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8ce12e6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from re_verbs_better import find_re_verbs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "4d8a66f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re_verbs_corpus = \"wordlists/re_verbs_updated.txt\"\n",
+    "\n",
+    "def find_re_verbs(sentence, cos_predicate_path = re_verbs_corpus):\n",
+    "\n",
+    "    with open(cos_predicate_path, 'r') as f:\n",
+    "        re_verbs = set([l.strip() for l in f.readlines()])\n",
+    "\n",
+    "    # extract words as list of strings\n",
+    "    words = [t.text for t in sentence]\n",
+    "    \n",
+    "    if set(words) & re_verbs:\n",
+    "        \n",
+    "        for token in sentence:\n",
+    "            #print(token, token.tag_, token.dep_)\n",
+    "            if (str(token) in re_verbs\n",
+    "                and token.tag_[0] == \"V\"\n",
+    "                and token.dep_ == \"ROOT\"):  # why?? \n",
+    "                \n",
+    "                if len(list(token.children))  > 0: \n",
+    "                    return True \n",
+    "                    \n",
+    "    return False \n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "99ed0f74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s6 = \"holly decided to reconnect the charger?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "f9fa075f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_re_verbs(nlp(s6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "4b7b8bef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(re_verbs_corpus, 'r') as f:\n",
+    "        re_verbs = set([l.strip() for l in f.readlines()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "7ca002c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"reenter\" in re_verbs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "ee53d864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from re_verbs_better import find_re_verbs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "7178e321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy import displacy\n",
+    "from spacy.matcher import PhraseMatcher\n",
+    "\n",
+    "implicative_path = \"wordlists/implicative_predicates.txt\"\n",
+    "\n",
+    "def find_implicatives(sentence, impl_pred_path=implicative_path):\n",
+    "    \n",
+    "    nlp = spacy.load(\"en_core_web_sm\")\n",
+    "    matcher = PhraseMatcher(nlp.vocab)\n",
+    "    \n",
+    "    with open(impl_pred_path, 'r') as f:\n",
+    "        implicatives = [l.strip() for l in f]\n",
+    "        implicative_pairs = [item.split(\":\") for item in implicatives] #seperate predicates and inferences\n",
+    "        implicative_predicates = [pair[0] for pair in implicative_pairs]\n",
+    "        implicative_inferences_dict = {pair[0]:pair[1] for pair in implicative_pairs} #dictionary mapping predicates to inferences\n",
+    "        implicative_verbs = set([p.split()[0] for p in implicative_predicates])\n",
+    "        # add implicative predicates to matcher\n",
+    "        patterns = [nlp.make_doc(text) for text in implicative_predicates]\n",
+    "        matcher.add(\"IMPL_PRED_LIST\", None, *patterns)\n",
+    "        \n",
+    "\n",
+    "    #words = [t.text for t in sentence]\n",
+    "    # find matches of implicative predicates in the sentence\n",
+    "    matches = matcher(sentence)\n",
+    "\n",
+    "    if len(matches) > 0:\n",
+    "        for match_id, start, end in matches:\n",
+    "            impl_phrase = sentence[start:end]\n",
+    "            #print(str(impl_phrase))\n",
+    "        # match found, proceed to further checking\n",
+    "        for token in sentence:\n",
+    "            if (str(token) in implicative_verbs\n",
+    "                and token.tag_[0] == \"V\"\n",
+    "                and token.dep_ == \"ROOT\"):\n",
+    "                #include = False\n",
+    "                for child in token.children:\n",
+    "                    if child.dep_ == \"prep\":\n",
+    "                        for childs in child.children:\n",
+    "                            if childs.dep_ == \"pcomp\" and childs.pos_ == \"VERB\":\n",
+    "                                return True \n",
+    "                                #include = True\n",
+    "                                #break\n",
+    "                    else:\n",
+    "                        if child.dep_ == \"xcomp\" and child.pos_ == \"VERB\":\n",
+    "                            return True \n",
+    "                            #include = True\n",
+    "                            #break\n",
+    "    return False "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "b9f98466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"survivors managed to scramble out through the tiny gap in the rocks\"\n",
+    "s1 = \"survivors scrambled through the tiny gaps on the rocks\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "62368a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from implicative_verbs_better import find_implicatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aa5f217",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -593,7 +721,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cmsc848q] *",
+   "display_name": "Python [conda env:cmsc848q]",
    "language": "python",
    "name": "conda-env-cmsc848q-py"
   },
